--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPR html>
 <html>
       <head>
-           <title> EclipseTrade´s </title>
+           <title> iFireZ </title>
            <link rel="stylesheet" type=text/css href="/css/main.css"> 
            <head>
            <body>
