--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
                   <nav> 
                   <ul>
                         <li><a href="/">Inicio</a></li>
-                        <li><a href="/about">Comenzar a tradear</a></li>
-                        <li><a href="/project">Proyecto</a></li>
-                        <li><a href="/hw">Blog</a></li>
+                       
                    </ul>
                    </nav>
                    <div class="container">
                    <div class="blurb">
-                        <h1> EclipseTrade´s </h1>
+                        <h1> iFireZ </h1>
                         <p> Discord : : iFireZ#7170  </p>
                         
                    </div>
