--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                    </nav>
                    <div class="container">
                    <div class="blurb">
-                        <h1> iFireZ </h1>
+                        <h1> Página personal de iFireZ </h1>
                         <p> Discord : : iFireZ#7170  </p>
                         
                    </div>
