--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                    <div class="container">
                    <div class="blurb">
                         <h1> iFireZ </h1>
-                        <p> Discord : : iFireZ#7170  </p>
+                        <p> Discord : iFireZ#7170  </p>
                         
                    </div>
                    </div>
