--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 body{
 animation: multifondo 43s infinite
 }
-@-webkit-keyframes multifondo {
+ multifondo {
     85.69%   {background-color: brown;}
     14.28%  {background-color: #dddccc;}
     28.57%  {background-color: brown;}
