--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                             
                  <style>
 body{
-@-webkit-keyframes animation: multifondo 43s infinite
+ animation: multifondo 43s infinite
 }
- multifondo {
+@-webkit-keyframes multifondo {
     85.69%   {background-color: brown;}
     14.28%  {background-color: #dddccc;}
     28.57%  {background-color: brown;}
